[tool.poetry]
name = "your-app"
version = "0.1.0"
description = "Your app description"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
numpy = "^1.24.3"
pandas = "^2.0.3"
scikit-learn = "^1.3.2"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
joblib = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
